--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -147,6 +147,8 @@ a {
 }
 html,
 body {
+  width: 100%;
+  height: 100%;
   font-family: "Arial", "Microsoft YaHei", "黑体", "宋体", "微软雅黑", sans-serif;
 }
 body {
