--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -81,9 +81,7 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
   font: inherit;
-  font-weight: normal;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -125,7 +123,7 @@ table {
 a {
   color: #7e8c8d;
   text-decoration: none;
-  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 ::-webkit-scrollbar {
   width: 5px;
@@ -133,21 +131,20 @@ a {
 }
 ::-webkit-scrollbar-track-piece {
   background-color: rgba(0, 0, 0, 0.2);
-  -webkit-border-radius: 6px;
+  border-radius: 6px;
 }
 ::-webkit-scrollbar-thumb:vertical {
   height: 5px;
   background-color: #409EFF;
-  -webkit-border-radius: 6px;
+  border-radius: 6px;
 }
 ::-webkit-scrollbar-thumb:horizontal {
   width: 5px;
   background-color: #409EFF;
-  -webkit-border-radius: 6px;
+  border-radius: 6px;
 }
 html,
 body {
-  width: 100%;
   height: 100%;
   font-family: "Arial", "Microsoft YaHei", "黑体", "宋体", "微软雅黑", sans-serif;
 }
